--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="rSL-S1-vD7">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6aP-0D-MvR">
                                 <rect key="frame" x="20" y="220" width="280" height="46.5"/>
@@ -108,7 +108,6 @@
                             <constraint firstItem="LSp-hv-m8X" firstAttribute="top" secondItem="SFG-JX-bEp" secondAttribute="bottom" constant="80" id="BqG-rr-P2N"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="width" secondItem="T8c-tq-TPY" secondAttribute="width" id="Ixe-3Q-WYB"/>
                             <constraint firstItem="wGB-iC-I9p" firstAttribute="top" secondItem="LSp-hv-m8X" secondAttribute="bottom" constant="10" id="Mk7-gQ-agr"/>
-                            <constraint firstItem="rSL-S1-vD7" firstAttribute="top" secondItem="SFG-JX-bEp" secondAttribute="bottom" id="Op5-x4-Zoh"/>
                             <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="RVE-Ox-tFP"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="leading" secondItem="6aP-0D-MvR" secondAttribute="leading" id="U0n-y6-yie"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="trailing" secondItem="T8c-tq-TPY" secondAttribute="trailing" id="UEf-5x-kpP"/>
@@ -116,6 +115,7 @@
                             <constraint firstAttribute="trailing" secondItem="LSp-hv-m8X" secondAttribute="trailing" constant="20" id="Yk0-IX-PGu"/>
                             <constraint firstItem="T8c-tq-TPY" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" constant="10" id="bQP-Im-TiT"/>
                             <constraint firstItem="LSp-hv-m8X" firstAttribute="leading" secondItem="ahs-FQ-cd2" secondAttribute="leading" constant="20" id="c0g-Hx-AoN"/>
+                            <constraint firstItem="rSL-S1-vD7" firstAttribute="top" secondItem="ahs-FQ-cd2" secondAttribute="top" id="clZ-Hp-yjd"/>
                             <constraint firstAttribute="trailing" secondItem="rSL-S1-vD7" secondAttribute="trailing" id="fcZ-56-83j"/>
                             <constraint firstItem="wGB-iC-I9p" firstAttribute="leading" secondItem="LSp-hv-m8X" secondAttribute="leading" id="gMs-4C-3jy"/>
                             <constraint firstItem="tbe-fy-czQ" firstAttribute="top" secondItem="T8c-tq-TPY" secondAttribute="bottom" constant="10" id="gdn-Pn-ELQ"/>
@@ -156,7 +156,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="JJ9-IA-7v1">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xe3-Zk-Fxt">
                                 <rect key="frame" x="20" y="206.5" width="280" height="35"/>
@@ -197,7 +197,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="centerY" secondItem="6YF-KF-GxT" secondAttribute="centerY" constant="-60" id="5GZ-xR-gg0"/>
-                            <constraint firstItem="JJ9-IA-7v1" firstAttribute="top" secondItem="kWJ-Cr-AI8" secondAttribute="bottom" id="5dt-bH-jxM"/>
                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" constant="20" id="6iO-qv-EBm"/>
                             <constraint firstItem="tV4-uA-XEV" firstAttribute="trailing" secondItem="Rbw-kg-nbU" secondAttribute="trailing" id="7j7-9m-lb8"/>
                             <constraint firstItem="mRB-3c-vaS" firstAttribute="top" secondItem="JJ9-IA-7v1" secondAttribute="bottom" id="9VJ-bu-Ffj"/>
@@ -210,6 +209,7 @@
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="height" secondItem="xe3-Zk-Fxt" secondAttribute="height" id="jfw-tK-5ql"/>
                             <constraint firstItem="tV4-uA-XEV" firstAttribute="leading" secondItem="Rbw-kg-nbU" secondAttribute="leading" id="nJD-Nn-XsW"/>
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="trailing" secondItem="xe3-Zk-Fxt" secondAttribute="trailing" id="nLo-RW-55Q"/>
+                            <constraint firstItem="JJ9-IA-7v1" firstAttribute="top" secondItem="6YF-KF-GxT" secondAttribute="top" id="uc9-7p-aKq"/>
                         </constraints>
                     </view>
                     <connections>
@@ -260,7 +260,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5TQ-gH-dvK" id="jsX-u9-gUg">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_avar" translatesAutoresizingMaskIntoConstraints="NO" id="D0w-EX-9GP">
@@ -344,9 +344,95 @@
             </objects>
             <point key="canvasLocation" x="685.60000000000002" y="118.29085457271366"/>
         </scene>
+        <!--Add Contact View Controller-->
+        <scene sceneID="LlZ-Qr-2bx">
+            <objects>
+                <viewController storyboardIdentifier="AddContactViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GPV-4o-2kp" customClass="AddContactViewController" customModule="LocationTracking" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1Be-rY-Efh"/>
+                        <viewControllerLayoutGuide type="bottom" id="UUz-vR-wWR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eYz-iw-fey">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="NeX-nJ-AaI">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o24-d3-1b2">
+                                <rect key="frame" x="15" y="50" width="290" height="40"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QME-dB-nQi">
+                                        <rect key="frame" x="0.0" y="2.5" width="290" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="bQl-cZ-h46"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="GPV-4o-2kp" id="rpe-cv-hPM"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgZ-Na-6RE">
+                                        <rect key="frame" x="250" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="3xb-l5-8r8"/>
+                                            <constraint firstAttribute="width" constant="40" id="Amg-JH-T3n"/>
+                                        </constraints>
+                                        <state key="normal" image="ic_search"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="wgZ-Na-6RE" secondAttribute="trailing" id="Dxi-Ga-qdM"/>
+                                    <constraint firstItem="QME-dB-nQi" firstAttribute="leading" secondItem="o24-d3-1b2" secondAttribute="leading" id="MYJ-8Q-Ve0"/>
+                                    <constraint firstAttribute="trailing" secondItem="QME-dB-nQi" secondAttribute="trailing" id="ZX9-Y2-NrU"/>
+                                    <constraint firstItem="wgZ-Na-6RE" firstAttribute="top" secondItem="o24-d3-1b2" secondAttribute="top" id="eun-w5-Dgt"/>
+                                    <constraint firstItem="wgZ-Na-6RE" firstAttribute="centerY" secondItem="QME-dB-nQi" secondAttribute="centerY" id="mkI-yB-Q2Z"/>
+                                    <constraint firstAttribute="bottom" secondItem="wgZ-Na-6RE" secondAttribute="bottom" id="tvK-gS-neF"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XO2-z8-Mgg">
+                                <rect key="frame" x="0.0" y="90" width="320" height="478"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwf-6h-bVw">
+                                <rect key="frame" x="15" y="20" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="2im-sP-oNx"/>
+                                    <constraint firstAttribute="height" constant="35" id="Yyj-He-4S4"/>
+                                </constraints>
+                                <state key="normal" image="ic_close_popup"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NeX-nJ-AaI" firstAttribute="top" secondItem="eYz-iw-fey" secondAttribute="top" id="0lG-mh-qup"/>
+                            <constraint firstAttribute="trailing" secondItem="o24-d3-1b2" secondAttribute="trailing" constant="15" id="3K6-aP-73d"/>
+                            <constraint firstItem="o24-d3-1b2" firstAttribute="top" secondItem="1Be-rY-Efh" secondAttribute="bottom" constant="30" id="IP2-tF-yTZ"/>
+                            <constraint firstItem="o24-d3-1b2" firstAttribute="leading" secondItem="eYz-iw-fey" secondAttribute="leading" constant="15" id="Riu-gk-NLh"/>
+                            <constraint firstItem="XO2-z8-Mgg" firstAttribute="top" secondItem="o24-d3-1b2" secondAttribute="bottom" id="Z3I-L8-aWD"/>
+                            <constraint firstItem="UUz-vR-wWR" firstAttribute="top" secondItem="XO2-z8-Mgg" secondAttribute="bottom" id="afn-k3-hcx"/>
+                            <constraint firstAttribute="trailing" secondItem="XO2-z8-Mgg" secondAttribute="trailing" id="fK4-Rn-xOl"/>
+                            <constraint firstItem="qwf-6h-bVw" firstAttribute="top" secondItem="eYz-iw-fey" secondAttribute="top" constant="20" id="iWG-I2-TwN"/>
+                            <constraint firstAttribute="trailing" secondItem="NeX-nJ-AaI" secondAttribute="trailing" id="lfe-Ah-dSQ"/>
+                            <constraint firstItem="qwf-6h-bVw" firstAttribute="leading" secondItem="eYz-iw-fey" secondAttribute="leading" constant="15" id="rm4-T4-rpG"/>
+                            <constraint firstItem="NeX-nJ-AaI" firstAttribute="leading" secondItem="eYz-iw-fey" secondAttribute="leading" id="uDd-Fl-I9I"/>
+                            <constraint firstItem="XO2-z8-Mgg" firstAttribute="leading" secondItem="eYz-iw-fey" secondAttribute="leading" id="vrh-4p-ErY"/>
+                            <constraint firstItem="UUz-vR-wWR" firstAttribute="top" secondItem="NeX-nJ-AaI" secondAttribute="bottom" id="xLy-Hy-P1q"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yMa-38-YMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1683.75" y="61.267605633802816"/>
+        </scene>
     </scenes>
     <resources>
         <image name="background" width="372" height="696"/>
         <image name="ic_avar" width="75" height="75"/>
+        <image name="ic_close_popup" width="10" height="10"/>
+        <image name="ic_search" width="12" height="12"/>
     </resources>
 </document>
