--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -381,6 +381,9 @@
                                             <constraint firstAttribute="width" constant="40" id="Amg-JH-T3n"/>
                                         </constraints>
                                         <state key="normal" image="ic_search"/>
+                                        <connections>
+                                            <action selector="tappedSearchContact:" destination="GPV-4o-2kp" eventType="touchUpInside" id="2GB-fH-elA"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -396,6 +399,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XO2-z8-Mgg">
                                 <rect key="frame" x="0.0" y="90" width="320" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="GPV-4o-2kp" id="jcf-Nv-jBb"/>
+                                    <outlet property="delegate" destination="GPV-4o-2kp" id="76b-iD-KUM"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwf-6h-bVw">
                                 <rect key="frame" x="15" y="20" width="35" height="35"/>
@@ -404,6 +411,9 @@
                                     <constraint firstAttribute="height" constant="35" id="Yyj-He-4S4"/>
                                 </constraints>
                                 <state key="normal" image="ic_close_popup"/>
+                                <connections>
+                                    <action selector="tappedClose:" destination="GPV-4o-2kp" eventType="touchUpInside" id="loJ-Me-YsR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -423,6 +433,13 @@
                             <constraint firstItem="UUz-vR-wWR" firstAttribute="top" secondItem="NeX-nJ-AaI" secondAttribute="bottom" id="xLy-Hy-P1q"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="closeButton" destination="qwf-6h-bVw" id="L6b-8U-ye4"/>
+                        <outlet property="searchButton" destination="wgZ-Na-6RE" id="1pp-dL-znL"/>
+                        <outlet property="searchTextView" destination="QME-dB-nQi" id="1Ae-Rc-EYr"/>
+                        <outlet property="searchView" destination="o24-d3-1b2" id="iL2-qd-naN"/>
+                        <outlet property="tableView" destination="XO2-z8-Mgg" id="uKU-5x-bP7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yMa-38-YMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
